<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/song_icon"
                android:outlineProvider="bounds"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/imagen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="18dp"
                android:textColor="@color/greenDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.08"
                android:paddingHorizontal="5dp"
                tools:text="@string/song_title" />

            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="18dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/ivIcon"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintVertical_bias="0.2"
                android:textStyle="bold"
                android:paddingHorizontal="5dp"
                tools:text="@string/song_artist" />
            <TextView
                android:id="@+id/tvAlbum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="18dp"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/ivIcon"
                app:layout_constraintTop_toBottomOf="@id/tvArtist"
                app:layout_constraintVertical_bias="0.2"
                android:paddingHorizontal="5dp"
                tools:text="@string/song_album" />

           <TextView
                android:id="@+id/tvYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
               android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/tvAlbum"
                app:layout_constraintTop_toBottomOf="@id/tvAlbum"
               app:layout_constraintEnd_toStartOf="@+id/tvDuration"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@string/song_year" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="textEnd"
                android:textSize="13sp"
                android:textStyle="italic"
                android:lines="1"
                app:layout_constraintStart_toEndOf="@id/tvYear"
                app:layout_constraintTop_toBottomOf="@id/tvAlbum"
                app:layout_constraintEnd_toEndOf="@id/tvAlbum"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="10dp"
                tools:text="@string/song_duration" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>